Added submodules, pom.xml reworked

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>     
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build> 
         <pluginManagement> 
@@ -62,5 +67,7 @@
     </reporting>
     <modules>
         <module>dogs-persistence</module>
+        <module>dogs-api</module>
+        <module>dogs-service</module>
     </modules>
 </project>
