--- a/dogs-api/pom.xml
+++ b/dogs-api/pom.xml
@@ -10,6 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dogs-api</artifactId>
+    <packaging>jar</packaging>
 
-
+    <name>dogs-api</name>
+    <description>DTOs and facade interfaces.</description>
+    
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dogs-persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
