--- a/dogs-persistence/pom.xml
+++ b/dogs-persistence/pom.xml
@@ -31,6 +31,13 @@
             <artifactId>derby</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 	
     <build>
