Added empty implementations and basic tests for service layer.

--- a/dogs-service/pom.xml
+++ b/dogs-service/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>dogs-service</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dogs-persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.6</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
