--- a/dogs-service/pom.xml
+++ b/dogs-service/pom.xml
@@ -14,10 +14,23 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>dogs-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>dogs-persistence</artifactId>
             <version>${project.version}</version>
         </dependency>
         
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+           <!-- <type>jar</type> -->
+        </dependency>
+
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
