--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,23 @@
                         <target>1.7</target> 
                     </configuration> 
                 </plugin> 
-            </plugins> 
+            </plugins>
         </pluginManagement> 
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>aggregate</id>
+                        <goals>
+                            <goal>aggregate</goal>
+                        </goals>
+                        <phase>site</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins> 
     </build> 
     <reporting>
         <plugins>
