Created dogs-web module with Hello World example controller

--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,6 @@
         <module>dogs-api</module>
         <module>dogs-service</module>
         <module>dogs-rest</module>
+        <module>dogs-web</module>
     </modules>
 </project>
