--- a/dogs-web/pom.xml
+++ b/dogs-web/pom.xml
@@ -14,6 +14,17 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>dogs-service</artifactId>
             <version>${project.version}</version>
+            
+            <exclusions>
+                <exclusion> 
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion> 
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions> 
         </dependency>
         
         <dependency>
