--- a/dogs-api/pom.xml
+++ b/dogs-api/pom.xml
@@ -20,5 +20,9 @@
             <artifactId>dogs-persistence</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
