--- a/dogs-rest/pom.xml
+++ b/dogs-rest/pom.xml
@@ -18,7 +18,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>dogs-service</artifactId>
+            <artifactId>dogs-sample-data</artifactId>
             <version>${project.version}</version>
 
             <exclusions>
